# wrale-acdm

./: CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  acdm.toml.example
.github/workflows/: ci.yml  publish.yml
GUIDANCE/issues/closed-fixed/: 2025-03-30-0001.md  2025-03-30-0003.md  2025-03-30-0007.md
GUIDANCE/issues/closed-partially-fixed/: 2025-03-30-0004.md  2025-03-30-0005.md
GUIDANCE/issues/open/: 2025-03-30-0001.md  2025-03-30-0002.md  2025-03-30-0004.md  2025-03-30-0006.md  2025-03-30-0008.md
GUIDANCE/issues/templates/: issue-template-complex.md  issue-template-simple.md
GUIDANCE/roadmap/: README.md
GUIDANCE/seed/: README.md
docs/: user-guide.md
src/: lib.rs  main.rs
src/application/: dto.rs  mod.rs  status.rs  use_cases.rs
src/cli/: mod.rs
src/cli/commands/: add.rs  include.rs  init.rs  mod.rs  status.rs  update.rs
src/domain/: auth.rs  error.rs  examples.rs  mod.rs  models.rs  repositories.rs  services.rs
src/infrastructure/: configuration.rs  file_system.rs  git.rs  mod.rs
src/interfaces/: cli.rs  mod.rs
tests/: cli_tests.rs  integration_tests.rs
tests/integration/: config_management.rs  current_dir_tests.rs  dependency_management.rs  git_detection.rs  git_operations.rs  init_command.rs  mod.rs  skip_commit.rs
